--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,5 +2,18 @@ html{
   margin: 0;
   padding: 0;
   font-family: "Nunito Sans", sans-serif;
+  scroll-behavior: smooth;
+}
 
+body{
+  background-color: #000000;
+}
+
+.navbar {
+  transition: all 0.5s;
+}
+
+.navbar-scrolled{
+  background-color: #000000;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15);
 }
