navbar con cambio de color listo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body{
   transition: all 0.5s;
 }
 
-.navbar-scrolled{
+/* .navbar-scrolled{
   background-color: #000000;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15);
-}
+} */
